--- a/project1_PC.Rmd
+++ b/project1_PC.Rmd
@@ -4,6 +4,8 @@ author: "Peiyu Chen"
 date: "2024-09-07"
 output: html_document
 ---
+
+
 ## check package and data
 
 
@@ -48,12 +50,14 @@ glimpse(chocolate)
 
 ```
 
+
 ## Part 1: Explore data
+
 
 1. Make a histogram of the rating scores to visualize the overall distribution scores. 
 Change the number of bins from default to 10, 15, 20, and 25. 
-Pick on the one that you think looks the best.
-Explain what the difference is when you changes the number of bins and explain why you picked the one you did. 
+Pick on the one that you think looks the best.Explain what the difference is when you changes the number of bins and explain why you picked the one you did. 
+
 
 ```{r message=FALSE}
 hist(chocolate$rating, main = "#bins=default")
