--- a/project1_PC.Rmd
+++ b/project1_PC.Rmd
@@ -70,5 +70,120 @@ hist(chocolate$rating, breaks=25, main = "#bins =25")
 
 2. Consider the countries where the beans originated from. How many reviews come from each country of bean origin?
 
+```{r}
+beans <- filter(chocolate, company_location == country_of_bean_origin)
+count(group_by(beans,country_of_bean_origin))
+```
+ 
+ 
+ 3. What is average rating scores from reviews of chocolate bars that have Ecuador as country_of_bean_origin in this dataset? 
+ 
+ For this same set of reviews, also calculate 
+ 
+ (1) the total number of reviews and 
+ 
+ (2) the standard deviation of the rating scores. 
+ 
+ Your answer should be a new data frame with these three summary statistics in three columns. Label the name of these columns mean, sd, and total.
+ 
+
+```{r}
+ecuador <- chocolate %>% group_by(country_of_bean_origin)%>% filter(country_of_bean_origin == "Ecuador")
+
+summary <- ecuador %>%
+  summarise (
+    mean = mean(rating),
+    sd = sd(rating),
+    total = n()
+  )
+print(summary)
+```
+
+
+4. Which company location makes the best chocolate (or has the highest ratings on average) with beans from Ecuador?
+
+
+```{r}
+
+maxecuador <- ecuador %>% 
+  group_by(company_location)%>%
+  summarise(mean= mean(rating)) %>%
+  arrange(desc(mean))%>%
+  slice(1)
+print(maxecuador)
+
+```
+
+5. Calculate the average rating across all country of origins for beans. Which top 3 countries (for bean origin) have the highest ratings on average?
+
+
+```{r}
+high3 <- chocolate %>% group_by(country_of_bean_origin) %>%
+  summarise(mean=mean(rating))%>%
+  arrange(desc(mean))%>%
+  slice(1:3)
+print(high3)
+```
+
+
+6. Following up on the previous problem, now remove any countries of bean origins that have less than 10 chocolate bar reviews. Now, which top 3 countries have the highest ratings on average?
+
+```{r}
+high3_10 <- chocolate %>% group_by(country_of_bean_origin) %>%
+  filter(n() >=10)%>%
+  summarise(mean=mean(rating))%>%
+  arrange(desc(mean))%>%
+  slice(1:3)
+
+print(high3_10)
+```
+
+7. For this last part, let’s explore the relationship between percent chocolate and ratings.
+
+Use the functions in dplyr, tidyr, and lubridate to perform the following steps to the chocolate dataset:
+
+    a. Identify the countries of bean origin with at least 50 reviews. Remove reviews from countries are not in this list.
+
+    b. Using the variable describing the chocolate percentage for each review, create a new column that groups chocolate percentages into one of four groups: (i) <60%, (ii) >=60 to <70%, (iii) >=70 to <90%, and (iii) >=90% 
+    (Hint: check out the substr() function in base R and the case_when() function from dplyr – see example below).
+    
+    c. Using the new column described in #2, re-order the factor levels (if needed) to be starting with the smallest percentage group and increasing to the largest percentage group (Hint check out the fct_relevel() function from forcats).
+    
+    d. For each country, make a set of four side-by-side boxplots plotting the groups on the x-axis and the ratings on the y-axis. These plots should be faceted by country.
+
+
+On average, which category of chocolate percentage is most highly rated? Do these countries mostly agree or are there disagreements?
+
+```{r}
+library(dplyr)
+library(tidyr)
+library(lubridate)
+
+#a. identify countries have more than 50 reviews.
+country50 <- chocolate %>%
+  group_by(country_of_bean_origin) %>%
+  filter(n() >= 50)
+#b. create new variable- 4 groups: (i) <60%, (ii) >=60 to <70%, (iii) >=70 to <90%, and (iii) >=90%  
+country50$cocoa_num <- as.numeric(substr(country50$cocoa_percent, 1, nchar(country50$cocoa_percent)-1))
+
+country50 <- country50 %>% mutate(percgroup = case_when(
+        cocoa_num < 60~ 1,
+        cocoa_num >= 60 & cocoa_num <70 ~ 2,
+        cocoa_num >= 70 & cocoa_num <90 ~ 3,
+        cocoa_num >=90 ~ 4
+    ))
+
+ ggplot(country50 , aes(x = as.factor (percgroup), y = rating)) +
+  geom_boxplot() +
+  facet_wrap(~ country_of_bean_origin) +               # Facet the plot by 'country'
+  labs(x = "Cocoa Percentage Group",    # Label for x-axis
+       y = "Rating",                    # Label for y-axis
+       title = "Ratings by Cocoa Percentage Group, Faceted by Country") +
+  theme_minimal()   
+
+```
+
+
+
 
 
